# cobsm

./: CMakeLists.txt  README.md  cobsm.h
src/: cobsm.c
test/: cobsm_test.c
tests/: CMakeLists.txt  cobsm_test.c
